fixed up dark mode colors added meta tag so dark mode extensions ignore as it's already dark mode

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -5,13 +5,14 @@
 
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #121212;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  background-color: #161616;
+  background-color: #121212;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 a {
